--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -3,3 +3,9 @@ development:
   api_key: ENV['CLOUDINARY_API_KEY']
   api_secret: ENV['CLOUDINARY_API_SECRET']
   secure: true
+
+production: 
+  cloud_name: ENV['CLOUDINARY_CLOUD_NAME']
+  api_key: ENV['CLOUDINARY_API_KEY']
+  api_secret: ENV['CLOUDINARY_API_SECRET']
+  secure: true
